# mcp

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Jenkinsfile  README.md  __init__.py  build_vector_db.py  generate_reports_via_agent.py  main.py  mcp.json  pyproject.toml  requirements.txt  test_rag_search.py  test_report_pipeline.py
clients/: __init__.py
config/: logger.py
data/faiss_index/: index.faiss  index.pkl
server/: __init__.py  mcp_server.py
server/api/: mcp_admin_routes.py
server/api/prompts/: user_prompts.py
server/api/resources/: db_tools.py  report_db_tools.py  user_resources.py
server/api/routes/: reports_api.py
server/api/tools/: plan_agent_tools.py  plan_tools.py  report_agent_tools.py  report_tools.py  user_tools.py
server/core/: config.py
server/prompts/: user_prompts.py
server/rag/faiss_deposit_products/: index.faiss  index.pkl
server/rag/faiss_saving_products/: index.faiss  index.pkl
server/resources/: db_tools.py  user_resources.py
server/routes/: data_route.py  mcp_admin_routes.py  mcp_route.py  rest_route.py
server/schemas/: plan_schema.py  report_schema.py  user_schema.py
server/tools/: plan_agent_tools.py  plan_tools.py  report_tools.py  user_tools.py  weather.py
server/update/: db_tools.py  plan_agent_tools.py  plan_schema.py
