[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmake>=4.2.0",
    "fastapi>=0.122.0",
    "fastmcp>=2.13.1",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
